@@ -83,20 +83,6 @@ void EXPORT_FUNC(grub_partition_map_register) (grub_partition_map_t partmap);
 
 void EXPORT_FUNC(grub_partition_map_unregister) (grub_partition_map_t partmap);
 
-#ifdef GRUB_UTIL
-void grub_msdos_partition_map_init (void);
-void grub_msdos_partition_map_fini (void);
-void grub_amiga_partition_map_init (void);
-void grub_amiga_partition_map_fini (void);
-void grub_apple_partition_map_init (void);
-void grub_apple_partition_map_fini (void);
-void grub_sun_partition_map_init (void);
-void grub_sun_partition_map_fini (void);
-void grub_gpt_partition_map_init (void);
-void grub_gpt_partition_map_fini (void);
-void grub_apple_partition_map_init (void);
-void grub_apple_partition_map_fini (void);
-#endif
 
 static inline grub_disk_addr_t
 grub_partition_get_start (const grub_partition_t p)
